# deepsensor

./: CONTRIBUTING.md  genindex.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js  setup.cfg
.github/: pull_request_template.md
.github/workflows/: tests.yml
_modules/: index.html
deepsensor/: plot.py
deepsensor/active_learning/: algorithms.py
deepsensor/data/: loader.py  sources.py  task.py
deepsensor/model/: convnp.py  model.py  pred.py
reference/: plot.html
reference/active_learning/: algorithms.html
reference/data/: loader.html  processor.html  sources.html  utils.html
reference/model/: convnp.html  model.html  pred.html
reference/train/: train.html
requirements/: requirements.txt
tests/: test_model.py
