[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsensor"
version = "0.3.8"
authors = [
    {name = "Tom R. Andersson", email="tomandersson3@gmail.com"},
]
description = "A Python package for modelling xarray and pandas data with neural processes."
readme = "README.md"
license = {text="MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "neuralprocesses>=0.2.6",
    "backends-matrix",
    "backends",
    "numpy",
    "pandas",
    "xarray",
    "dask",
    "distributed",
    "pyshp",
    "tqdm",
    "seaborn",
    "pooch",
    "gcsfs",
    "zarr"
]

[tool.setuptools]
packages = ["deepsensor"]

[project.urls]
Source = "https://github.com/alan-turing-institute/deepsensor"
Bug_Tracker = "https://github.com/alan-turing-institute/deepsensor/issues"

[project.optional-dependencies]
torch = ["torch>=2"]
tf = ["tensorflow", "tensorflow_probability[tf]"]
dev = [
    "black",
    "coveralls",
    "parameterized",
    "pytest",
    "pytest-cov",
    "tox",
    "tox-gh-actions",
]
docs = [
    "jupyter-book",
    "matplotlib",
    "numpy",
]
testing = [
    "pytest",
    "pytest-cov",
    "mypy",
    "tox",
]

[tool.setuptools.package-data]
deepsensor = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--cov=deepsensor"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "deepsensor"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true